--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 :root {
     --main-bg-color: #23272f;
     --text-color: #fff;
-    --btn-bg-color: #383b3f;
-    --btn-text-color: #fff;
+    --btn-bg-color: #16444f;
+    --btn-text-color: #57c4dc;
+    --card-bg-color: #343a46;
 
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -37,8 +38,9 @@ body {
     :root {
         --main-bg-color: #fff;
         --text-color: #000;
-        --btn-bg-color: #16444f;
-        --btn-text-color: #57c4dc;
+        --btn-bg-color: #383b3f;
+        --btn-text-color: #fff;
+        --card-bg-color: #ebedf0;
     }
 }
 
@@ -46,7 +48,8 @@ body {
     :root {
         --main-bg-color: #23272f;
         --text-color: #fff;
-        --btn-bg-color: #383b3f;
-        --btn-text-color: #fff;
+        --btn-bg-color: #16444f;
+        --btn-text-color: #57c4dc;
+        --card-bg-color: #343a46;
     }
 }
