--- a/src/components/QuestionCard/QuestionCard.module.css
+++ b/src/components/QuestionCard/QuestionCard.module.css
@@ -4,6 +4,7 @@
     border-radius: 10px;
     padding: 15px;
     background-color: var(--card-bg-color);
+    color: var(--text-color);
     box-shadow: 0 0 8px 5px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
