--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     --btn-bg-color: #16444f;
     --btn-text-color: #57c4dc;
     --card-bg-color: #343a46;
+    --green-color: #219679;
 
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
