--- a/src/pages/AddQuestion/AddQuestion.module.css
+++ b/src/pages/AddQuestion/AddQuestion.module.css
@@ -39,6 +39,7 @@
 
     select,
     textarea {
+        max-width: 100%;
         padding: 5px;
         color: var(--text-color);
         background-color: var(--main-bg-color);
@@ -46,6 +47,7 @@
         border-radius: 5px;
         outline: none;
         border: none;
+        scrollbar-width: none;
     }
 
     select:focus-visible,
@@ -60,6 +62,7 @@
     justify-content: flex-start;
     align-items: center;
     gap: 10px;
+    cursor: pointer;
 }
 
 .checkbox {
