--- a/src/pages/AddQuestionPage/AddQuestionPage.module.css
+++ b/src/pages/AddQuestionPage/AddQuestionPage.module.css
@@ -1,4 +1,4 @@
-.fromTitle {
+.formTitle {
     margin: 25px auto;
     width: fit-content;
 }
@@ -10,68 +10,4 @@
     border-radius: 10px;
     background-color: var(--card-bg-color);
     box-shadow: 0 0 8px 5px rgba(0, 0, 0, 0.1);
-}
-
-/* Form component */
-
-.form {
-    width: 100%;
-    padding: 20px 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: stretch;
-    gap: 15px;
-}
-
-.formControl {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: stretch;
-    gap: 5px;
-
-    label {
-        color: var(--text-color);
-        font-size: 18px;
-    }
-
-    select,
-    textarea {
-        max-width: 100%;
-        padding: 5px;
-        color: var(--text-color);
-        background-color: var(--main-bg-color);
-        font-size: 16px;
-        border-radius: 5px;
-        outline: none;
-        border: none;
-        scrollbar-width: none;
-    }
-
-    select:focus-visible,
-    textarea:focus-visible {
-        outline: 2px solid var(--green-color);
-    }
-}
-
-.clearFormControl {
-    width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 10px;
-    cursor: pointer;
-}
-
-.checkbox {
-    width: 18px;
-    height: 18px;
-    accent-color: var(--green-color);
-    cursor: pointer;
-}
-
-.checkbox:disabled + span {
-    opacity: 0.5;
 }
