add ThemeToggler and ThemeProvider components

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 70px;
     background-color: var(--main-bg-color);
+    color: var(--text-color);
     padding: 0 30px;
     display: flex;
     justify-content: space-between;
